# quick-n1-analyzer

./: .gitignore  README.md
.github/workflows/: python-app.yml
example/: main.py
n1analysis/: pyproject.toml
n1analysis/binary_classification/: misclassification_analysis.py  plot_transaction.py
n1analysis/datasets/: payment_transaction.py
n1analysis/n1analysis/binary_classification/: classification_utils.py  misclassification_analysis.py  plot_auc.py
n1analysis/n1analysis/example/: main.py
