[tool.poetry]
name = "n1analysis"
version = "0.0.1"
description = ""
authors = ["shogohasegawa <hasesho0824@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.13"
pandas = "^2.1.3"
matplotlib = "^3.8.2"
pysimplegui = "^4.60.5"
pyspark = "^3.5.0"


[tool.poetry.group.dev.dependencies]
taskipy = "^1.12.2"
mypy = "^1.7.1"
black = "^23.11.0"
flake8 = "^6.1.0"
autoflake = "^2.2.1"
isort = "^5.12.0"
pytest = "^7.4.3"
pep8-naming = "^0.13.3"
pytest-cov = "^4.1.0"

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
allow_redefinition = true
warn_redundant_casts = true
incremental = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
lint = "flake8 --ignore=E501 n1analysis tests && isort -c n1analysis tests && black --check -t py39 --diff --line-length 119 n1analysis tests"
format = "autoflake --in-place --remove-unused-variables --remove-all-unused-imports --recursive n1analysis tests && black --line-length 119 n1analysis tests"
mypy = "mypy n1analysis tests"
test = "pytest -vv --cov=n1analysis --cov-report=html --junitxml=test_result/junit.xml test"
